# logl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  audio.cpp  bounding_shapes.cpp  callstack.cpp  console.cpp  dds_loader.cpp  dds_loader_impl.cpp  debug_shapes.cpp  eng.cpp  entity.cpp  error.cpp  eye.cpp  file_monitor.cpp  fixed_string_buffer.cpp  font.cpp  fps.cpp  frustum.cpp  gl_binding_state.cpp  gl_misc.cpp  gl_timer_query.cpp  glsl_inspect.cpp  imgui_glfw.cpp  imgui_pipeline.cpp  kitchen_sink.cpp  math_ops.cpp  mesh.cpp  nf_config_data.cpp  nf_json_parser.cpp  nf_memory_tracker.cpp  nf_simple.cpp  nf_string_table.cpp  one_header_libs.cpp  par_shapes.cpp  pmr_compatible_allocs.cpp  post_processing.cpp  render_utils.cpp  resource.cpp  rng.cpp  scene_tree.cpp  shader.cpp  (+3 more)
src/quarantine/: gauss_jordan.cpp  half_edge.h  ringbuffer.h  sort_test.cpp
test/: .clang-format  .editorconfig  .ycm_extra_conf.py.bak  CMakeLists.txt  cwd.h  cwd.py  test.h
test/b2d_grad_desc_test/: .clang-format  CMakeLists.txt  cos_distance.cpp
test/bv_test/: CMakeLists.txt  box_test.cpp  change_files.py  cons_test.cpp  cppreflection_tests.cpp  duk_helper.cpp  duk_helper.h  duk_modules_test.cpp  duk_shader_container.js  duk_tryout.cpp  file_monitor_test.cpp  fluid_blitter_vsfs.glsl  fluidcs11.cpp  fs_quad_color.frag  fs_quad_vs.vert  gaussian_blur_utils.h  goof_with_blur.cpp  grid_based_fluid.cpp  grid_based_fluid.js  imgui_gl3_render.inc.h  imgui_glfw_input.inc.h  json_validator_test.cpp  mat.py  noise2d.js  noise2d_tutorial.cpp  once_block_test.cpp  pascals_triangle.js  raycast.cpp  raycast.vsfs.glsl  raycast_2.cpp  raycast_2.sjson  raycast_2.vsfs.glsl  rng_cs_tweak.sjson  simple_sc_test.cpp  skelanim.cpp  sound_test.cpp  spheres_intr_cs.hlsl  stams_simple_fluid.cpp  string_table_test.cpp  timed_block_test.cpp  (+6 more)
test/bv_test/d3d_dev/: .clang-format  CMakeLists.txt  d3d11_misc.cpp  d3d11_misc.h  d3d_eye.cpp  d3d_eye.h  d3d_ray.cpp  d3d_ray_tweak.sjson  d3d_renderdoc.cpp  d3d_simple_utils.h  d3d_skelanim.cpp  d3d_ssao.cpp  d3d_test.cpp  d3d_timer.h  draw_with_ssao_ps.hlsl  dxerr.cpp  dxerr.h  dxmath_vs_logl.cpp  full_screen_quad_vs.hlsl  gen_obj_mesh.cpp  record_normals_and_depth_ps.hlsl  rjm_mc.h  scene_with_normals_ps.hlsl  ssao_blur_pass_ps.hlsl  ssao_sampling_ps.hlsl  triangle_ps.hlsl  triangle_vs.hlsl  usual_ps.hlsl  usual_vs.hlsl
test/bv_test/data/: blur_density_vsfs.glsl  color_output_vsfs.glsl  data_types.inc.glsl  (+6 more)
test/configs/: font_name.sjson
test/defer_test/: CMakeLists.txt  aabb_fs.frag  aabb_vs.vert  cubes.json  debug_line_shader.glsl  debug_overlay_test.cpp  defer_light_test.cpp  defer_test_quad.cpp  defer_test_quad_shaders.inc.h  essentials.cpp  essentials.h  generate_lights.cpp  generate_spheres.cpp  geom_pass.frag  geom_pass.vert  geom_vs.vert  geometry_pass.frag  geometry_pass.vert  lighting.frag  non_defer_test.cpp  occlude_then_defer.cpp  occlusion_cull_shader.comp  oit_blend_frags.frag  oit_blend_frags.vert  oit_build_list.frag  oit_build_list.vert  order_dependent.cpp  order_independent.cpp  par_shapes.cpp  quad_vs.vert  quad_with_lighting.frag  test_material.json  vs.vert  with_typed_gl_test.cpp
test/fb_test/: CMakeLists.txt  dbg_imgui.h  main.cpp  postprocess.frag  postprocess.vert
test/font_test/: .gitignore  CMakeLists.txt  bounded_bezier_test.cpp  console_test.cpp  df_draw_test.cpp  distance_field.cpp  distance_field.h  distance_field_config.json  essentials.cpp  essentials.h  font_test.cpp  generate_dist_fields.cpp  glyph_draw.frag  glyph_draw.vert  grid_layout.cpp  grid_layout_example.json  input_system_test.cpp  ipqueue.h  lodbias.cpp  random_layout.json  random_rects.py  smooth.frag  smooth_df.frag  stb_truetype.h  stitch_dfs.cpp  test_stbtt.cpp  ui.cpp  vis_df.cpp  vis_df.frag  vis_df.vert  write_distance_field.cpp
test/game_1_test/: CMakeLists.txt  b2d_tryout.cpp  b2d_tryout.ini  b2d_tryout.ini.sjson  b2d_tryout_meshes.inc  b2d_tryout_meshes.inc.h  box2d_compat.h  minimal_pnuv_shader.vert  my_test_bed.cpp  renderer_stuff.h  typed_gl_test.cpp  typed_gl_test.ini.sjson
test/ibl_test/: CMakeLists.txt  ibl_intro.cpp  ibl_intro_utils.h
test/instance_test/: CMakeLists.txt  essentials.h  fs.frag  gen_image.cpp  gen_tetinfo.py  inc.h  instanced_tets.frag  instanced_tets.vert  instanced_tets_rot.vert  main.cpp  main_separate_formats.cpp  particles.cpp  particles_config.json  tetinfo.json  vs.vert
test/math_test/: CMakeLists.txt  SymmetricMatrices.txt  basic_test.cpp  eigensolver_test.cpp  gauss_jordan_test.cpp  matmul_bench_test.cpp  numpy_generate_symmetric.py  ortho_comp_test.cpp
test/model_test/: CMakeLists.txt  arcball.cpp  cube_draw.frag  cube_draw.vert  dbg_imgui.cpp  depth_vis_fs.frag  depth_vis_vs.vert  draw_principle_axis.cpp  essentials.h  floor_draw_fs.frag  floor_draw_vs.vert  generate_points.cpp  lines_draw.frag  lines_draw.vert  points.json  points_draw.frag  points_draw.vert  principle_axis_test.cpp  skinned_mesh.cpp  sphere_draw.frag  sphere_draw.vert  tangent_space_calc.cpp
test/shaders/: cooktorrance.frag  font_test.frag  font_test.vert  normal_map_test.frag  normal_map_test.vert  normal_map_test_per_vert.frag  normal_map_test_per_vert.vert  passthru.frag  passthru.vert  phong_test.frag  phong_test.vert  texturing_test.frag  texturing_test.vert
test/shadow_maps_test/: CMakeLists.txt  demo_types.cpp  demo_types.h  diffuse_irradiance_map.cpp  diffuse_irradiance_map.h  diffuse_irradiance_utils.inc.h  image_based_test.cpp  imgui_gl3_render.inc.h  imgui_impl_opengl3.cpp  interim_fbo.h  shadow_map.cpp  shadow_map.h  shadow_map_test_new_api.cpp  shadowmap_test.cpp  thick_glass.cpp
test/tiny_test/: .gitignore  CMakeLists.txt  clipper.py  drawobj.py  idk.h  image.h  jacks_scanconv.cpp  loadobj.cpp  loadobj.py  maths.py  polyfill.cpp  ryg_blog_rasterizer.py  stbi.py  tiny.cpp
third/duktape/: CMakeLists.txt  duk_module_duktape.c
third/glad/: CMakeLists.txt
third/glad_compat/: CMakeLists.txt
third/halpern_pmr/: CMakeLists.txt
third/imgui/: CMakeLists.txt  imconfig.h
(+160 files in other folders)
